# mate-control-center

./: README  configure.ac  meson.build  meson_options.txt
.github/workflows/: builds.yml  release.yml
capplets/about-me/: e-image-chooser.c  e-image-chooser.h  mate-about-me-dialog.ui  mate-about-me-fingerprint.c  mate-about-me-password.c  mate-about-me.c  meson.build
capplets/appearance/: Makefile.am  appearance-accountsservice.c  appearance-accountsservice.h  appearance-desktop.c  appearance-main.c  appearance-style.c  appearance-themes.c  appearance.h  mate-wp-info.c  mate-wp-item.c  mate-wp-item.h  mate-wp-xml.c  meson.build
capplets/appearance/data/: appearance.ui
capplets/common/: activate-settings-daemon.c  file-transfer-dialog.c  mate-theme-apply.c  mate-theme-info.c  theme-thumbnail.c  wm-common.c
capplets/display/: Makefile.am  meson.build  wayland-display.c  wayland-display.h  xrandr-capplet.c
capplets/keybindings/: eggaccelerators.c
capplets/keyboard/: mate-keyboard-properties-xkb-wayland.c  mate-keyboard-properties-xkb.c  mate-keyboard-properties-xkb.h  mate-keyboard-properties-xkbltadd.c  mate-keyboard-properties.c  meson.build
capplets/mouse/: mate-mouse-properties.c  msd-input-helper.c
capplets/windows/: mate-window-properties.c
help/sv/: sv.po
typing-break/: drw-break-window.c  drw-monitor.c  drw-utils.c  drwright.c
