option('accountsservice', type: 'feature', value: 'auto', description: 'enable accountsservice')
option('gstreamer', type: 'boolean', value: true, description: 'Enable webcam avatar capture support via GStreamer')
option('libappindicator', type: 'string', value: 'auto', description: 'enable libappindicator')
